# ai-invention-210829-evaluating-embedding-based-semantic-cohe

./: README.md
chat/messages/: README.md
chat/messages/3_report_results/: 3_gen_full_paper.md
chat/prompts/: README.md
chat/prompts/3_report_results/: 3_gen_full_paper.md
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  convert_pdf_to_png.py  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
prompts/: README.md
prompts/3_report_results/: 3_gen_full_paper.md
round-1/dataset-1/: README.md
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  DATASET_SUMMARY.md  README.md  check_downloads.py  create_splits.py  data.py  download_and_standardize.py  download_standardize_v2.py  mini_data_out.json  preview_data_out.json  pyproject.toml
round-1/experiment-1/: README.md
round-1/experiment-1/src/: .sdk_openhands_agent_struct_out.json  RESULTS.md  method.py  method_final.py  method_simple.py  mini_method_out.json  pyproject.toml  run_experiment.py  test_sce.py
round-1/experiment-1/src/data/: enhanced_dataset.json  full_dataset.json  mini_dataset.json
round-1/experiment-1/src/results/: full_method_out.json  preview_method_out.json  summary.json
round-1/research-1/: README.md
round-2/evaluation-1/: README.md
round-2/experiment-1/: README.md
round-2/experiment-1/src/: .sdk_openhands_agent_struct_out.json  README_RESULTS.md  method.py  method_out.json  preview_method_out.json  pyproject.toml  requirements_frozen.txt  test_scd.py
round-2/research-1/: README.md
(+113 files in other folders)
