[project]
name = "readability-datasets-sce"
version = "0.1.0"
description = "Readability datasets for Semantic Control Energy (SCE) evaluation"
requires-python = ">=3.12"
dependencies = [
    "datasets==5.0.0",
    "pandas==3.0.3",
    "huggingface-hub==1.20.1",
    "scikit-learn==1.8.0",
    "loguru==0.7.3",
    "json5==0.12.0",
    "pathlib2==0.13.2",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.scripts]
prepare-datasets = "data:main"
