[project]
name = "sce-readability"
version = "0.1.0"
description = "Semantic Control Energy (SCE) for Readability"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.5.1",
    "pandas==3.0.3",
    "scipy==1.18.0",
    "scikit-learn==1.9.0",
    "sentence-transformers==5.6.0",
    "textstat==0.7.3",
    "loguru==0.7.3",
]
